oxiplate-derive/tests/broken/if/stray-else.stderr
error: Unexpected 'else' statement
 --> tests/broken/if/stray-else.rs:4:36
  |
4 | #[oxiplate_inline("{{ action }}{%- else -%}")]
  |                                    ^^^^
